# CardGame

./: .gitignore  AGENTS.md  Cargo.toml  build.ps1  run.ps1
assets/shaders/: background.wgsl  crt_post_processing.wgsl  my_texture_atlas.wgsl
docs/agents/: domain.md
src/: main.rs  systems.rs
src/game_play/: components.rs  event.rs  mod.rs
src/game_play/systems/: mod.rs  mouse_input_handle.rs  movement.rs  selection.rs  setup.rs  tilting.rs
src/main_menu/: styles.rs
src/main_menu/systems/: interactions.rs
src/visual_effect/: crt_post_processing.rs
