[package]
name = "CardGame"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "=0.18.0", features = ["file_watcher"] }
bevy-inspector-egui = { version = "=0.36", features = ["highlight_changes"] }
rand = { version = "*" }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
strum = { version = "*" }
strum_macros = { version = "*" }

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
